--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 # Put your Confluence username, API key, and domain in this.
 .env
+# when building with go build this will be the resulting executable
+pubdoc
